--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -115,3 +115,7 @@ table.dataTable thead .sorting_desc {
 .form-check.is-invalid ~ .invalid-feedback {
     display: block;
 }
+
+.site-logo-wrap {
+    width: 30%;
+}
